0.6
- add check for null classes which might be lost in runtime