@@ -4,6 +4,7 @@ import android.app.Application;
 import android.content.Context;
 import android.support.annotation.Nullable;
 import java.lang.ref.WeakReference;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 import wiki.depasquale.mcache.adapters.FilesIOHandler;
@@ -59,16 +60,22 @@ public class MCache {
   public static IOHandler getIOHandler(Class<? extends IOHandler> cls) {
     initMap();
     if (sIOHandlerInstance.containsKey(cls)) {
-      return sIOHandlerInstance.get(cls);
+      IOHandler handler = sIOHandlerInstance.get(cls);
+      if (handler == null) { sIOHandlerInstance.remove(cls); }
+      return getIOHandler(cls);
     } else {
       try {
-        IOHandler interfaceType = cls.newInstance();
+        IOHandler interfaceType = cls.getConstructor().newInstance();
         sIOHandlerInstance.put(cls, interfaceType);
         return interfaceType;
       } catch (InstantiationException e) {
         throw new RuntimeException(cls.getName() + " cannot be instantiated.");
       } catch (IllegalAccessException e) {
         throw new RuntimeException(cls.getName() + " probably does not contain constructor.");
+      } catch (NoSuchMethodException e) {
+        throw new RuntimeException(cls.getName() + " probably does not contain constructor.");
+      } catch (InvocationTargetException e) {
+        throw new RuntimeException(cls.getName() + " is beyond my understanding.");
       }
     }
   }
